user.css
/* ... */
/* Shuffle disabled */
.main-shuffleButton-button {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/phosphor-icons/shuffle.svg');
  background-color: var(--spice-subtext) !important;
  height: 22px !important;
}
/* Shuffle enabled */
.main-shuffleButton-button[aria-checked="true"] {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/phosphor-icons/shuffle-bold.svg');
  background-color: var(--spice-accent) !important;
  height: 22px !important;
}

/*Like button*/
.control-button-heart[aria-checked=true] {
  color: var(--spice-accent);
}

.control-button-heart[aria-checked=false]{
  color: var(--spice-subtext);
}

/*Removes download progress bar and icon on playlist*/
.L3vU7A1LzZSa3DcQcnmK,
.PJuB4n2TjjZFBiWAW2zx,
.gtuJjD43VjwtP8ii3H3P {
  display: none !important;
}

/*Remove gradient in name*/
.eSMjmiD29Ox35O95waw6:after, .eSMjmiD29Ox35O95waw6:before{
  width: 0 !important;
}

/* ads */

.main-leaderboardComponent-container,
.main-billboardComponent-footer,
.k6onUQZSeZIsonJ4cSpK {
  display: none;
}

.desktoproutes-homepage-takeover-ad-hptoComponent-parentContainer,
.desktoproutes-homepage-takeover-ad-hptoComponent-container,
.snMc3rl8H2pM9cqkTpQ6 {
  display: none !important;
}

.main-topBar-UpgradeButton {
  display: none !important;
}


/* play buttons */

.main-playButton-button,
.main-playButton-PlayButton,
.main-trackList-rowPlayPauseButton{
  background-color: var(--spice-text) !important;
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/fluentui-system-icons/ic_fluent_play_24_filled.svg');
}


/* error content */

.main-pageErrorTemplate-errorBody {
  min-height: calc((100vh - 64px) - 105px);
}

.main-pageErrorTemplate-errorBody svg {
  margin: 0;
}


/* spicetify */

#spicetify-sidebar-config {
  flex-direction: column;
  top: -60px !important;
}

#spicetify-show-list >* {
  padding: 0px;
}

/* spicetify extensions */

.main-topBar-button[title="Popup Lyrics"],
.main-topBar-button[title="Full App Display"],
.main-topBar-button[title="Bookmark"] {
  background-color: var(--spice-card) !important;
}

.iUSAh1wdhXLk9hHSbkCA.hsrxlVHxK0zZrgarkxuA:after{
  border-bottom: none;
}


.a2ruVaZt_DdrdHz3GqgU,
.x-categoryCard-CategoryCard{
  color:var(--spice-alt-text);
}

.UyzJidwrGk3awngSGIwv,
.X1lXSiVj0pzhQCUo_72A,
.main-addButton-button[aria-checked=false] {
  color: var(--spice-text);
}

.JzZyf6OGCGtdscOZGt8Y {
  background: var(--spice-card);
  border: 1px solid var(--spice-player-border);
  border-radius: var(--border-radius-3);
}

.QZhV0hWVKlExlKr266jo,
.QZhV0hWVKlExlKr266jo::placeholder,
.EsqEJ_NPrHsPkTbX4FW8,
._bjbHn5TABOW2s5LsEGX,
.JzZyf6OGCGtdscOZGt8Y,
.wCl7pMTEE68v1xuZeZiB,
.w6j_vX6SF5IxSXrrkYw5 {
  color: var(--spice-subtext);
}

/* lyrics pages fix */

.Q2RPoHcoxygOoPLXLMww{
  padding-bottom: 350px;
  padding-right: 150px;
}

.hW9km7ku6_iggdWDR_Lg{
  margin-top: 0;
}

.K8PtC1Way9XetxDGwCGx {
  background-color: var(--spice-main);
  color: var(--spice-text);
}

.hKccLC {
  background-color: var(--spice-accent);
  color: var(--spice-alt-text);
  border-radius: var(--border-radius-3);
}

.ksogXh:hover{
  color: var(--spice-rgb-subtext);
}

.awGNDbf1c8TGBAFR0pv8 button:focus {
  outline: 0px auto #3673d4;
  outline-offset: 0px;
}

.main-view-container__scroll-node-child{
  padding-bottom: 118px;
}

.jvWzgRWM_y_9FFTYRCcB{
  padding: 6px;
}

.Z35BWOA10YGn5uc9YgAp .WWDxafTPs4AgThdcX5jN{
  border-radius:var(--border-radius-3) ;
}

.main-trackList-playsHeader{
  width: 12.8ch;
}

.main-trackList-durationHeader{
  margin-left: 30px;
}

.main-trackList-rowSectionEnd{
  margin: auto;
}

.main-trackList-column{
  padding-left: 10px;
}

.npv-background-image__overlay {
  background-color: rgba(var(--spice-rgb-layer-shadow),.7) !important;
}

nav .main-rootlist-wrapper > :nth-child(2) {
  transform: translateY(0) !important;
}

.main-rootlist-rootlistItemOverlay {
  display: none;
}

